# vat-abcd-crawler

./: .gitignore  .travis.yml  Cargo.toml  README.md  abcd-fields-stripped.json  abcd-fields.csv  abcd-fields.json  csv-to-gpkg.sh  post_to_slack.py  post_to_slack.sh  settings-default.toml  settings.toml
.github/workflows/: ci.yml
src/: abcd_fields.rs  abcd_parser.rs  abcd_version.rs  archive_reader.rs  bms_datasets.rs  bms_providers.rs  database_sink.rs  example.rs  file_downloader.rs  main.rs  settings.rs  test_utils.rs  vat_type.rs  xmlParser.rs
src/abcd/: abcd_fields.rs  abcd_parser.rs  abcd_version.rs  archive_reader.rs  mod.rs
src/bms/: datasets.rs  mod.rs  providers.rs
src/pangaea/: mod.rs  search_result.rs
src/storage/: database_sink.rs  field.rs  mod.rs  surrogate_key.rs
src/test_utils/: mod.rs  webserver.rs
tests/: learning_tests.rs
tests/learning/: mockito.rs  mod.rs
