[package]
name = "vat_abcd_crawler"
version = "0.1.0"
authors = ["Christian Beilschmidt <beilschmidt@mathematik.uni-marburg.de>"]
edition = "2018"

[dependencies]
clap = "2.32"
csv = "1.0"
config = { version = "0.9", features = ["toml"] }
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
postgres = "0.15"
postgres-openssl = "0.1"
quick-xml = "0.13"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.6"
simplelog = "0.5"
tempfile = "3.0"
zip = "0.5"

[dev-dependencies]
mockito = "0.17.1"
