[package]
name = "vat_abcd_crawler"
version = "0.2.0"
authors = ["Christian Beilschmidt <beilschmidt@mathematik.uni-marburg.de>"]
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["cargo"] }
csv = "1.0"
config = { version = "0.13", features = ["toml"] }
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
openssl = "0.10"
postgres = "0.19"
postgres-openssl = "0.5"
quick-xml = "0.22"
reqwest = {version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
simplelog = "0.12"
tempfile = "3.0"
zip = "0.6"

[dev-dependencies]
mockito = "0.31"
